# narro

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
benchmarks/: bench.py  long_bench.py
docs/: CHAT_COMPLETION.md
docs/plans/: 2026-02-13-metafunctor-tts-design.md  2026-02-13-metafunctor-tts-implementation.md  2026-02-13-narro-implementation.md  2026-02-13-narro-rename-design.md  2026-02-13-session-context.md  2026-02-23-hugo-integration-design.md  2026-02-23-hugo-integration-implementation.md  2026-04-13-embeddings-modality.md  2026-04-13-multi-venv-workers.md  2026-04-13-muse-restructure.md  2026-04-14-supervisor-enhancements.md  2026-04-15-chat-completion-gguf-resolvers.md
docs/superpowers/specs/: 2026-03-16-gpu-server-quality-design.md
exports/: export_onnx.py
js/: demo.html  fft.mjs  soprano-decoder.mjs  test_e2e.mjs  test_full_decode.mjs  test_istft.mjs  test_npz.mjs
narro/: __init__.py  alignment.py  bench.py  catalog.py  cli.py  client.py  decode_only.py  encoded.py  protocol.py  rewrite.py  server.py  tts.py
narro/backends/: base.py  transformers.py
narro/hugo/: cli.py  extract.py
narro/hugo/assets/: tts-player.css  tts-player.html  tts-player.js
narro/models/: __init__.py  bark.py  soprano.py
narro/utils/: text_normalizer.py  text_splitter.py
narro/vocos/: models.py  spectral_ops.py
soprano/: __init__.py  cli.py  decode_only.py  encoded.py  server.py  tts.py  webui.py
soprano/backends/: base.py  transformers.py
soprano/utils/: text_normalizer.py
soprano/vocos/: decoder.py  heads.py  migrate_weights.py  models.py  modules.py  spectral_ops.py
src/muse/: __init__.py  chat_formats.yaml  cli.py  curated.yaml
src/muse/audio/speech/: __init__.py  client.py  codec.py  decode_only.py  encoded.py  protocol.py
src/muse/cli_impl/: imagine.py  search.py  serve.py  speak.py  supervisor.py  worker.py
src/muse/core/: catalog.py  chat_formats.py  curated.py  registry.py  resolvers.py  resolvers_hf.py  server.py
src/muse/embeddings/: __init__.py  client.py  protocol.py  routes.py
src/muse/embeddings/backends/: minilm.py  nv_embed_v2.py  qwen3_embedding.py
src/muse/modalities/chat_completion/: __init__.py  client.py  codec.py  protocol.py  routes.py
src/muse/modalities/embedding_text/: __init__.py  client.py  codec.py  routes.py
src/muse/models/: all_minilm_l6_v2.py  nv_embed_v2.py  qwen3_embedding_0_6b.py  sd_turbo.py
tests/: test_alignment.py  test_bark.py  test_bench.py  test_benchmarks.py  test_catalog.py  test_cli.py  test_client.py  test_encode_decode.py  test_encoded.py  test_hugo_cli.py  test_hugo_extract.py  test_models.py  test_performance.py  test_protocol.py  test_rewrite.py  test_server.py  test_tts_coverage.py
tests/audio/speech/: test_bark.py  test_client.py  test_codec.py  test_kokoro.py  test_protocol.py
tests/cli_impl/: test_e2e_supervisor.py  test_gateway.py  test_search.py  test_supervisor.py  test_worker.py
tests/core/: test_catalog.py  test_chat_formats.py  test_curated.py  test_discovery.py  test_registry.py  test_resolvers.py  test_resolvers_hf.py  test_server.py
tests/embeddings/: test_client.py  test_codec.py  test_minilm.py  test_nv_embed_v2.py  test_protocol.py  test_qwen3_embedding.py  test_routes.py
tests/integration/: README.md  conftest.py  test_remote_chat.py  test_remote_tools.py
tests/modalities/chat_completion/: test_client.py  test_codec.py  test_protocol.py  test_routes.py  test_routes_messages_passthrough.py
tests/modalities/embedding_text/: test_client.py  test_codec.py  test_minilm.py  test_nv_embed_v2.py  test_protocol.py  test_qwen3_embedding.py  test_routes.py
tests/modalities/image_generation/: test_client.py  test_codec.py  test_protocol.py  test_routes.py  test_sd_turbo.py
(+14 files in other folders)
