[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "narro"
version = "0.3.0"
authors = [
  { name="Alex Towell", email="lex@metafunctor.com" },
]
description = "Narro: lightweight CPU text-to-speech"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "huggingface_hub",
  "numpy",
  "pyyaml",
  "scipy",
  "torch>=2.1.0",
  "transformers>=4.51.0",
  "unidecode",
  "inflect"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/queelius/narro"
Issues = "https://github.com/queelius/narro/issues"

[tool.setuptools.packages.find]
include = ["narro*"]

[project.scripts]
narro = "narro.cli:main"
