[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muse"
version = "0.9.0"
authors = [
  { name="Alex Towell", email="lex@metafunctor.com" },
]
description = "Muse: model-agnostic multi-modality generation server (audio, images)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "huggingface_hub",
  "numpy",
  "requests",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/queelius/muse"
Issues = "https://github.com/queelius/muse/issues"

[project.optional-dependencies]
# Server runtime
server = ["fastapi", "uvicorn"]

# Audio modality (TTS)
audio = [
  "torch>=2.1.0",
  "transformers>=4.51.0",
  "scipy",
  "inflect",
  "unidecode",
]
audio-kokoro = ["kokoro", "soundfile", "misaki[en]"]

# Images modality (diffusion)
images = [
  "torch>=2.1.0",
  "diffusers>=0.27.0",
  "accelerate",
  "Pillow",
  "safetensors",
]

# Development
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx"]

[project.scripts]
muse = "muse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["muse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
